turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:12: error: Int does not take parameters
    if(rule(state()(x))){gauche();avance();}
                 ^